# aicam_libfacedetection

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: aicam.toml
src/: lib.rs  main.rs  settings.rs  upload.rs
