[package]
name = "aicam"
version = "0.1.0"
edition = "2021"
description = "AI face detection app based on opencv and libfacedetection libs"
authors = ["Vi+ <vitaliyy@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aicam"
path = "src/main.rs"

[dependencies]
libfacedetection = { path = "./libfacedetection-rs/libfacedetection-rs" }
thiserror = "1.0.57"
opencv = "0.88.8"
chrono = "0.4.34"
serde = "1.0.197"
toml = "0.8.10"
argh = "0.1.12"
once_cell = "1.19.0"
