[package]
name = "aicam"
version = "0.1.0"
edition = "2021"
description = "AI face detection & notification app (opencv + libfacedetection)"
authors = ["Vi+ <vitaliyy@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "aicam"
path = "src/main.rs"

[dependencies]
libfacedetection = { path = "./libfacedetection-rs/libfacedetection-rs" }
opencv = "0.88.8"
chrono = "0.4.34"
serde = "1.0.197"
toml = "0.8.10"
argh = "0.1.12"
once_cell = "1.19.0"
log = "0.4.21"
env_logger = "0.11.2"
reqwest = { version = "0.11.24", features = ["blocking", "json", "multipart"] }
tokio = { version = "1.36.0", features = ["full"] }
